<resources>
    <string name="app_name">FindFilm</string>
    <string name="name_film">Loading...</string>
    <string name="desctiption_film">Desctiption</string>
    <string name="poster">poster</string>
    <string name="search">search</string>
    <string name="settings">Settings</string>
    <string name="play_video">Play film</string>
    <string name="score_film">Score film</string>
    <string name="vote">Vote:</string>
    <string name="release_date">Release date:</string>
    <string name="button_one">Button one</string>
    <string name="button_two">Button two</string>
    <string name="button_three">Button three</string>
    <string name="button_now">Now</string>
    <string name="button_soon">Soon</string>
    <string name="buy_tickets">Buy tickets</string>
    <string name="_16">16+</string>
    <string name="_3d">3D</string>
    <string name="button_play_video">Button play video</string>
    <string name="current_film_poster">Current film poster</string>
    <string name="fill_color_area">Fill color area</string>
    <string name="first_route">first_route</string>
    <string name="second_route">second_route</string>
    <string name="third_route">third_route</string>
</resources>
