<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_child"
        android:enabled="true"
        android:icon="@drawable/baseline_child_care_24"
        android:title="@string/button_one"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/baseline_favorite_border_24"
        android:title="@string/button_two"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_invalid"
        android:enabled="true"
        android:icon="@drawable/baseline_accessible_24"
        android:title="@string/button_three"
        app:showAsAction="ifRoom" />
</menu>