<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:translationZ="0.1dp"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <android.support.design.button.MaterialButton
                android:id="@+id/button_now"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/button_now"
                android:textAppearance="@string/button_three"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <android.support.design.button.MaterialButton
                android:id="@+id/button_soon"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/button_soon"
                android:textAppearance="@string/button_three"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/container_child_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="visible"
        app:itemBackground="@color/colorPrimary"
        app:itemTextColor="@android:color/darker_gray"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/navigation_bottom_menu" />
</android.support.design.widget.CoordinatorLayout>